--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.9",
     "react-resizable-panels": "^2.1.7",
+    "react-window": "^1.8.11",
     "recharts": "2.15.0",
     "socket.io": "latest",
     "sonner": "^1.7.1",
